# SMOTA

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  TODO1.md  TODO2.md  TODO3.md  TODO4.md  TODO5.md  TODO6.md  TODO7.md  TODO8.md  TODO9.md  TODOLIST.md  compile_commands.json  readme.md
.claude/: settings.local.json
doc/: 0.requirements.md  1.project-structure.md  2.config-reference.md  3.key-management.md  4.ota-protocol.md  5.future-optimizations.md  6.porting-guide.md
examples/baremetal_example/: baremetal_example.c  main.c
examples/stm32_hal_example/: main.c  stm32_hal_example.c
examples/win_sim/: .clangd  CMakeLists.txt  README.md  TESTLIST.md  build.sh  main.c  smota_user_config.h  test_host.py  win_sim.code-workspace
examples/win_sim/keys/: aes_master_key.c  ecdsa_private_key.pem  ecdsa_public_key.c
examples/win_sim/port/: smota_port.c  smota_port.h
scripts/: keygen.py
smota/: smota.h
smota/smota_bootloader/inc/: bootloader.h
smota/smota_bootloader/src/: bootloader_dualbank.c  bootloader_dualslot.c  (+2 more)
smota/smota_hal/: smota_hal.c  smota_hal.h
smota_tools/: TOOL-TODOLIST.md  develop.md
smota_tools/doc/: 01-project-initialization.md  02-serial-port-module.md  TEST.md  phase1-summary.md  phase1-test-report.md  user-guide.md
smota_tools/packager/: packager.py  requirements.txt
smota_tools/serial-tool/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  test-quick.bat  test-quick.ps1
smota_tools/signer/: requirements.txt  sign.py
tests/integration/: test_integration.c
tests/unit/: test_smota.c
(+39 files in other folders)
